[tool.poetry]
name = "memex-obsidian"
version = "0.1.0"
description = ""
authors = ["yepdev <yep.dev7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
Jinja2 = "^3.1.2"
python-slugify = "^6.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

